* Fix: Ensure theme's settings namespace exists
* Fix: Ensure DC_VAR constant exists before using it
* Fix: Fix favicon path in auth page
* Fix: Allow https protocol for trackbacks
* Fix: Fix IPv4 antispam filter for subnet mask > 32
* Fix: Fix plugins privileges on config file
* Fix: Uses the same font in the CKEditor editor as the rest of the administration
* Lib: Update CKEditor from 4.16.1 to 4.16.2 (with local additional fixes in CKEditor jQuery adapter)
* Lib: Update Codemirror 5.62.0 from to 5.63.3
* ClearBricks: Allow legitimate .. in media filenames
* ClearBricks: Allow legacy forms (array of key => value) for select and optgroup components in form class
* Clearbricks: Add details block support in wiki syntax
* 🛡 Security: Add SECURITY.md document
* 🐛 → Various bugs, a11y concerns and typos fixed
* 🌼 → Some locales and cosmetic adjustments
* 📣 Warning: Next major release (2.21) will require PHP 7.4+

Dotclear 2.19 - 2021-08-13
===========================================================
* 🐘 PHP 7.3+ is required, PHP 8 compliance
* jQuery: Remove old jQuery biscuit plugin and replace it by "modern JS"
* jQuery: Remove old jQuery pwstrength plugin and replace it by "modern JS"
* Js: Use dotclear global object rather than global constants, var and methods (AFAP)
* Js: No more need of global dotclear_init const as dotclear global object is initialized before (prepend.js)
* Js: Rewrite metaEditor script
* Template: Add {{tpl:CategoryID}} template
* Template: Refine granularity of tpl:Blocks in dotty template set, will simplify inheritance and overload of themes
* Template: Add dc-home-first class to body tag if it is the first page (standard mode)
* Template: {{tpl:FeedLanguage}} consider lang in post context
* Admin UI: Remove some PNG fallback image when SVG are available as every modern browsers support SVG format
* Admin UI: Bye bye responsive font size, thanks for all the fish!